Alle aktiven veralteten new Integer(int)-Konstruktoren wurden durch Java Autoboxing oder Integer.parseInt() ersetzt. Der Code ist jetzt kompatibel mit modernen Java-Versionen und nutzt die Vorteile von Autoboxing.